--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 :root {
     --cor-de-fundo: #EBECEE;
 }
+.cabeçalho__menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
