--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 :root {
     --cor-de-fundo: #EBECEE;
 }
+
+body {
+    background-color: var(--cor-de-fundo);
+}
+
 .cabeçalho__menu-hamburguer {
     width: 24px;
     height: 24px;
